unpackaged/objects/CI_Object_2__c.object
<CustomObject>
	<description>My Desc - for propagation</description>
	<fields>
		<fullName>Field2__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Field2</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Field4__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Field4</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Field_6__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Field 6</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Field10__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Field10</label>
		<type>Checkbox</type>
	</fields>
	<label>CI Object 2</label>
	<nameField>
		<label>CI Object 2 Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>CO Objects 2</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>